[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
contour = "0.12.0"
fast_paths = "1.0.0"
geo = "0.29.1"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
# Note: i_overlay doesn't follow semver, and only guarantees non-breaking across patch versions.
# https://github.com/iShape-Rust/iOverlay?tab=readme-ov-file#versioning-policy
# So we pin to a minor version.
i_overlay = { version = ">=1.9.4,<1.10.0", default-features = false }
i_float = "1.3.1"
log = "0.4.20"
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
osm-reader = { git = "https://github.com/a-b-street/osm-reader" }
route-snapper-graph = { git = "https://github.com/dabreegster/route_snapper" }
rstar = "0.12.0"
serde = "1.0.188"
serde_json = "1.0.105"
serde-wasm-bindgen = "0.6.0"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }
web-time = "1.0.0"
petgraph = "0.7.1"

[dev-dependencies]
criterion = "0.5.1"
approx = "0.5.1"

# For local development, build dependencies in release mode once, but otherwise
# use dev profile and avoid wasm-opt.
[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "build_map_model"
harness = false
[[bench]]
name = "build_neighbourhood"
harness = false
[[bench]]
name = "router"
harness = false
[[bench]]
name = "shortcuts"
harness = false

[patch.crates-io]
# use unreleased `geo` and `geo-types` to fix crash: https://github.com/a-b-street/ltn/issues/54
# (awaiting release of https://github.com/georust/geo/pull/1279)
geo = {  git = "https://github.com/georust/geo" }
geo-types = {  git = "https://github.com/georust/geo" }

[patch."https://github.com/georust/geojson"]
geojson = { git = "https://github.com/michaelkirk/rust-geojson", branch = "mkirk/to-feature" }
