[package]
name = "backend"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
contour = "0.12.0"
fast_paths = "1.0.0"
flate2 = "1.1.1"
geo.workspace = true
geojson.workspace = true
itertools = "0.14.0"
# Note: i_overlay doesn't follow semver, and only guarantees non-breaking across patch versions.
# https://github.com/iShape-Rust/iOverlay?tab=readme-ov-file#versioning-policy
# So we pin to a minor version.
i_overlay = { version = ">=4.0.0,<4.1.0", default-features = false }
log = "0.4.20"
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }
osm-reader = { git = "https://github.com/a-b-street/osm-reader", features = ["serde"] }
petgraph = "0.7.1"
route-snapper-graph = { git = "https://github.com/dabreegster/route_snapper" }
rstar = { version = "0.12.0", features = ["serde"] }
serde.workspace = true
serde_json = "1.0.105"
serde-wasm-bindgen = "0.6.5"
utils.workspace = true
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.64", features = ["console"] }
web-time = "1.0.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"

[[bench]]
name = "boundary_stats"
harness = false

[[bench]]
name = "build_map_model"
harness = false

[[bench]]
name = "build_neighbourhood"
harness = false

[[bench]]
name = "impact"
harness = false

[[bench]]
name = "router"
harness = false

[[bench]]
name = "shortcuts"
harness = false
